[render preview][FEAT] support for signature 1 & 2 (#32)
* wip

* nonce rename to ticket

* doc

* WIP

* update DDL for airaccount_chains

* precisely reg by email; for supporting other ways

* refactor passkey

* sigin refactor

* bugfix: restore wallet to user

* support customer challenge

* bugfix: txdata empty

* bugfix: duplicated response

* support discoverable login

* demo support discoverable login

* support discoverable signin

* update swagger

* update swagger

* support one user multiple passkeys

* update passkey

* WIP

* bugfix: txSigRlt address

* WIP

* one chain support multip aa by alias

* update pkg

* bugfix: signup in different PASSKEY for each User

* bugfix: creat_aa with alias

* WIP: more hd wallets for one email

* support more hdwallets for one account

* update unit tests

* WIP: 1:N wallets and account

* Fix wallet usage check for specific network

* bugfix: re-use wallet if network is different

* bugfix and code clean

* changelog add

* update demo

* specify -7 and -257 only in registration session

* Update dependencies in go.mod file; fix critical vul

* replace http 404 to biz code 404 but http code 200
